Fixed logo alignment issue

--- a/client/src/Components/NavBar/NavBar.scss
+++ b/client/src/Components/NavBar/NavBar.scss
@@ -15,6 +15,12 @@
     //     background: linear-gradient(to left, var(--c2_1) 55%, var(--c3) 45%);
     // }
 
+    .nav-items-container{
+        width: 100%;
+        display: flex;
+        // border: 1px solid red;
+    }
+
     &:not(&.vertical) .ham-burger{
         position: fixed;
         flex-direction: column;
@@ -237,6 +243,10 @@
         position: relative;
         flex-direction: column;
         margin-top: 30px;
+
+        .nav-items-container{
+            flex-direction: column;
+        }
 
         .name-logo{
             margin: unset;
